tests/toy/neg/001701_mutation.toylang
program a = { while while do sleep; } .
